--- a/styles.css
+++ b/styles.css
@@ -3,34 +3,31 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0px
-    padding: 0px;
-    background-color: teal;
 }
 
-.box {
-
-    border: 2px solid lightblue;
-    padding: 10px;
-    margin: 1px;
-    width: 20px;
-    height: 20px;
-
-}
-
-#container {
-    width: 740px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 50px;
+#gridContainer {
+    width: 700px;
+    height: 700px;
+    display: grid;
+    grid-template-columns: repeat(16, 2fr);
+    grid-template-rows: repeat(16, 2fr);
+    margin-top: 75px;
     
 }
 
-header {
-    align-text: center;
+.box {
+    border: 1px solid black;
+    background-color: white;
+
+}
+
+.buttonsContainer {
+    display: flex;
     margin-top: 50px;
+    gap: 20px;
+}
+
+header {
+    font-size: 30px;
     font-weight: 700;
-    color: lightblue;
-    font-size: 40px;
 }
